--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@eslint/compat": "^1.2.7",
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.21.0",
+    "@prisma/client": "5.22.0",
     "@remix-run/dev": "^2.16.4",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
@@ -45,8 +46,10 @@
     "lint-staged": "^15.5.0",
     "postcss": "^8.4.38",
     "prettier": "^3.4.2",
+    "prisma": "5.22.0",
     "styled-components": "^6.1.16",
     "tailwindcss": "^3.4.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.17.0",
     "vite": "^6.0.3",
@@ -58,5 +61,8 @@
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "lint-staged": {
     "*.{js,jsx,ts,tsx,mjs}": "eslint --fix"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
